<resources>
    <string name="app_name">Safe &amp; Sound</string>

    <!-- Menu -->
    <string name="airquality">Air Quality</string>
    <string name="windows">Windows</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="livestream">Livestream</string>
    <string name="movement">Movements</string>
    <string name="rule">Rules</string>

    <!-- Air Quality -->
    <string name="luftfeutigkeit">Humidity</string>
    <string name="temperatur">Temperature</string>
    <string name="kohlenstoffdioxid">Carbondioxid</string>
    <string name="sauerstoff">Amomonium</string>
    <string name="kohlenstoffmonoxid">Carbonmonoxid</string>

    <!-- Rules -->
    <string name="addRule">Add Rule</string>
    <string name="ifText">If</string>
    <string name="thenText">Then</string>
    <string name="addIfStatement">Add If-Statement</string>
    <string name="actionText">Given suggestion</string>


    <!-- SettingsActivity -->
    <string name="logout">Log out</string>
    <string name="user">User</string>
    <string name="raspberrypi">Raspberry Pi</string>
    <string name="changeip">Change IP-Address</string>
    <string name="notSet">Not set yet</string>
    <string name="sensoren">Sensoren</string>
    <string name="configureSensor">Configure sensors</string>

    <!-- SensorOverview -->
    <string name="intervall">Intervall</string>
    <string name="range">Range</string>

    <!-- LogInActivity -->
    <string name="login">LogIn</string>
    <string name="welcomeText">Welcome to\nSafe &amp; Sound</string>
    <string name="submit">Submit</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="or">or</string>

    <!-- Signup -->
    <string name="bigSignupText">SignUp for\nSafe &amp; Sound</string>
    <string name="alreadyRegistered">Already registered?</string>


    <!-- Library -->
    <string name="libraryHeading">Motion Detection</string>
    <string name="libraryDesc">Click, to show picture...</string>

    <!--Diagramm-->

    <string name="dataProfile">Data profile</string>
    <string name="gasProfile">Gas profile</string>
    <string name="tempHumProfile">Temp &amp; Humidity profile</string>
    <string name="verlauf">Show data</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>

    <!--Window -->
    <string name="window">Window</string>
    <string name="windowOpen">open</string>
    <string name="windowClosed">closed</string>
    <string name="lastChange">Last status change:</string>

</resources>