<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/livestream"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/background_grey"
tools:context="com.safeandsound.app.safeandsound.view.AirQualityDiagrammActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/diagramTextView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:contentDescription="@string/app_name"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="Test"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/DiagramTextView3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/background_grey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startDate"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/endDate"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/getDataDia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verlauf"
            android:textAllCaps="false" />




    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout" />



</RelativeLayout>




