<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    tools:context="com.safeandsound.app.safeandsound.LogIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:isScrollContainer="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.safeandsound.app.safeandsound.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:text="@string/welcomeText"
            android:textAlignment="center"
            android:textSize="45dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:id="@+id/username"
            android:hint = "Enter Name"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "40dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/username"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint = "Enter Password"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "30dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <Button
            android:id = "@+id/button1"
            android:layout_width = "match_parent"
            android:layout_height = "60dip"
            android:onClick = "login"
            android:text = "@string/login"
            android:layout_gravity="center"
            android:textColor="@color/greyIcons"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:text="@string/forgotPassword"
            android:textAlignment="center"
            android:layout_marginTop="30dip"
            android:layout_marginBottom="5dip"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/or"
                android:textColor="@color/greyIcons"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_toLeftOf="@id/orText"
                android:background="@color/greyIcons"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:layout_toRightOf="@id/orText"
                android:background="@color/greyIcons"
                />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:text="@string/signup"
            android:textAlignment="center"
            android:layout_marginTop="5dip"
            android:onClick="signup"/>
    </LinearLayout>
</RelativeLayout>