<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/livestream"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="@color/background_grey"
tools:context="com.safeandsound.app.safeandsound.view.LibraryActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/libraryTextView"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:contentDescription="@string/app_name"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/libraryHeading"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/app_name"
            android:text="@string/libraryDesc"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/background_grey" />

        <ListView
            android:id="@+id/listViewLibrary"
            style="@style/Widget.AppCompat.ListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:divider="@color/greyIcons"
            android:dividerHeight="2dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="false"
            android:background="@color/white"/>




    </LinearLayout>

</RelativeLayout>