<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ifText"
        android:textColor="@android:color/black"/>
<LinearLayout
    android:id="@+id/llifs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/dataTypeSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/dataType">
        </Spinner>
        <Spinner
            android:id="@+id/comparisonTypeSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/comparisonType">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/firstComparisonData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="data value"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/secondComparisonData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="data value"
            android:inputType="numberDecimal"
            android:animateLayoutChanges="true"/>
    </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/button_addif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/ic_add"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/thenText"
        android:textColor="@android:color/black"/>
    <EditText
        android:id="@+id/actionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/actionText"/>
</LinearLayout>