<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/background_grey"
        tools:context="com.safeandsound.app.safeandsound.Settings">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey"
            android:isScrollContainer="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dip"
                        android:layout_weight="1"
                        android:id="@+id/livestreamText"
                        android:background="@color/background_grey"
                        android:textSize="16sp"
                        android:gravity="center_vertical|left"
                        android:paddingLeft="10dip"
                        android:text="@string/raspberrypi"
                        android:textAlignment="gravity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@drawable/ic_raspberrypi"
                        android:onClick="changeIPRP"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:id="@+id/ipAddressOutput"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|left"
                        android:text="@string/notSet"
                        android:textAlignment="gravity"
                        android:onClick="changeIPRP"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:id="@+id/changeIPText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|right"
                        android:text="@string/changeip"
                        android:textAlignment="gravity"
                        android:onClick="changeIPRP"/>
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_next_page"
                        android:background="@color/white"
                        android:onClick="changeIPRP"/>
                </LinearLayout>

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@drawable/ic_temperature"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:id="@+id/temperatureText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|left"
                        android:text="@string/temperatur"
                        android:textAlignment="gravity"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:id="@+id/temperatureOutputText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|right"
                        android:text="Settings"
                        android:textAlignment="gravity" />
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_next_page"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@drawable/ic_water"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/humidityText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|left"
                        android:text="@string/luftfeutigkeit"
                        android:textAlignment="gravity"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/humidityOutputText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|right"
                        android:text="Windows"
                        android:textAlignment="gravity" />
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_next_page"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@drawable/ic_oxygen"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/oxygenText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|left"
                        android:text="@string/sauerstoff"
                        android:textAlignment="gravity" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/oxygenOutputText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|right"
                        android:text="Library"
                        android:textAlignment="gravity" />
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_next_page"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_margin="2dp">
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:src="@drawable/ic_carbondioxid"/>
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/carbondioxidText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|left"
                        android:text="@string/kohlenstoffdioxid"
                        android:textAlignment="gravity" />
                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:id="@+id/carbondioxidOutputText"
                        android:background="@color/white"
                        android:textSize="16dip"
                        android:gravity="center_vertical|right"
                        android:text="Library"
                        android:textAlignment="gravity" />
                    <ImageView
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:src="@drawable/ic_next_page"
                        android:background="@color/white"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="5dip"
                android:text="@string/logout"/>
        </LinearLayout>
    </RelativeLayout>