<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    tools:context="com.safeandsound.app.safeandsound.LogIn">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:isScrollContainer="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.safeandsound.app.safeandsound.UbuntuTextView
            android:layout_width="match_parent"
            android:layout_height="100dip"
            android:text="@string/bigSignupText"
            android:textAlignment="center"
            android:textSize="35dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:id="@+id/username_input"
            android:hint = "Enter Name"
            android:focusable = "true"
            android:textColorHighlight = "@color/greyIcons"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "40dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/username_input"
            android:id="@+id/email_input"
            android:hint = "Enter Email"
            android:focusable = "true"
            android:textColorHighlight = "@color/greyIcons"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "30dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/email_input"
            android:inputType="textPassword"
            android:id="@+id/password_input"
            android:hint = "Enter Password"
            android:focusable = "true"
            android:textColorHighlight = "@color/greyIcons"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "30dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_below="@+id/password_input"
            android:id="@+id/ipAddress_input"
            android:hint = "Enter RaspberryPi IP-Address"
            android:focusable = "true"
            android:textColorHighlight = "@color/greyIcons"
            android:textColorHint = "@color/colorAccent"
            android:layout_marginTop = "30dp"
            android:layout_marginBottom="40dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <Button
            android:id = "@+id/button1"
            android:layout_width = "match_parent"
            android:layout_height = "60dip"
            android:onClick = "signup"
            android:text = "@string/signup"
            android:layout_gravity="center"
            android:textColor="@color/greyIcons"
            android:background="@color/colorAccent"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dip"
            android:text="@string/alreadyRegistered"
            android:textAlignment="center"
            android:layout_marginTop="30dip"
            android:layout_marginBottom="5dip"/>
    </LinearLayout>
</RelativeLayout>